--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "australis-bugzilla-widget",
   "fullName": "australis-bugzilla-widget",
   "id": "jid1-Z6r2SFr66RSx4Q",
-  "description": "",
-  "author": "A Bugzilla dashboard widget for tracking a user's bugs.",
+  "description": "A Bugzilla dashboard widget for tracking a user's bugs.",
+  "author": "Mozilla MSU",
   "license": "MPL 2.0",
-  "version": "0.1"
+  "version": "0.1",
+  "unpack": true
 }
